parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     block -> LBRACE statement_list RBRACE
Rule 5     block -> LBRACE RBRACE
Rule 6     statement -> ID EQUALS expr
Rule 7     statement -> PRINT LPAREN expr RPAREN
Rule 8     statement -> IF expr COLON block
Rule 9     statement -> IF expr COLON block ELSE COLON block
Rule 10    statement -> FOR ID IN RANGE LPAREN expr RPAREN COLON block
Rule 11    expr -> expr EQEQ expr
Rule 12    expr -> expr NEQ expr
Rule 13    expr -> expr GT expr
Rule 14    expr -> expr LT expr
Rule 15    expr -> expr GEQ expr
Rule 16    expr -> expr LEQ expr
Rule 17    expr -> expr AND expr
Rule 18    expr -> expr OR expr
Rule 19    expr -> expr PLUS expr
Rule 20    expr -> expr MINUS expr
Rule 21    expr -> expr TIMES expr
Rule 22    expr -> expr DIVIDE expr
Rule 23    expr -> NUMBER
Rule 24    expr -> FLOAT
Rule 25    expr -> ID
Rule 26    expr -> STRING
Rule 27    expr -> TRUE
Rule 28    expr -> FALSE
Rule 29    expr -> LPAREN expr RPAREN
Rule 30    expr -> expr COMMA expr

Terminals, with rules where they appear

AND                  : 17
COLON                : 8 9 9 10
COMMA                : 30
DIVIDE               : 22
ELSE                 : 9
EQEQ                 : 11
EQUALS               : 6
FALSE                : 28
FLOAT                : 24
FOR                  : 10
GEQ                  : 15
GT                   : 13
ID                   : 6 10 25
IF                   : 8 9
IN                   : 10
LBRACE               : 4 5
LEQ                  : 16
LPAREN               : 7 10 29
LT                   : 14
MINUS                : 20
NEQ                  : 12
NEWLINE              : 
NUMBER               : 23
OR                   : 18
PLUS                 : 19
PRINT                : 7
RANGE                : 10
RBRACE               : 4 5
RPAREN               : 7 10 29
STRING               : 26
TIMES                : 21
TRUE                 : 27
error                : 

Nonterminals, with rules where they appear

block                : 8 9 9 10
expr                 : 6 7 8 9 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 29 30 30
program              : 0
statement            : 2 3
statement_list       : 1 3 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (6) statement -> . ID EQUALS expr
    (7) statement -> . PRINT LPAREN expr RPAREN
    (8) statement -> . IF expr COLON block
    (9) statement -> . IF expr COLON block ELSE COLON block
    (10) statement -> . FOR ID IN RANGE LPAREN expr RPAREN COLON block

    ID              shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (6) statement -> . ID EQUALS expr
    (7) statement -> . PRINT LPAREN expr RPAREN
    (8) statement -> . IF expr COLON block
    (9) statement -> . IF expr COLON block ELSE COLON block
    (10) statement -> . FOR ID IN RANGE LPAREN expr RPAREN COLON block

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7

    statement                      shift and go to state 8

state 3

    (2) statement_list -> statement .

    ID              reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (6) statement -> ID . EQUALS expr

    EQUALS          shift and go to state 9


state 5

    (7) statement -> PRINT . LPAREN expr RPAREN

    LPAREN          shift and go to state 10


state 6

    (8) statement -> IF . expr COLON block
    (9) statement -> IF . expr COLON block ELSE COLON block
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 11

state 7

    (10) statement -> FOR . ID IN RANGE LPAREN expr RPAREN COLON block

    ID              shift and go to state 19


state 8

    (3) statement_list -> statement_list statement .

    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    FOR             reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 9

    (6) statement -> ID EQUALS . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 20

state 10

    (7) statement -> PRINT LPAREN . expr RPAREN
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 21

state 11

    (8) statement -> IF expr . COLON block
    (9) statement -> IF expr . COLON block ELSE COLON block
    (11) expr -> expr . EQEQ expr
    (12) expr -> expr . NEQ expr
    (13) expr -> expr . GT expr
    (14) expr -> expr . LT expr
    (15) expr -> expr . GEQ expr
    (16) expr -> expr . LEQ expr
    (17) expr -> expr . AND expr
    (18) expr -> expr . OR expr
    (19) expr -> expr . PLUS expr
    (20) expr -> expr . MINUS expr
    (21) expr -> expr . TIMES expr
    (22) expr -> expr . DIVIDE expr
    (30) expr -> expr . COMMA expr

    COLON           shift and go to state 22
    EQEQ            shift and go to state 23
    NEQ             shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GEQ             shift and go to state 27
    LEQ             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    COMMA           shift and go to state 35


state 12

    (23) expr -> NUMBER .

    COLON           reduce using rule 23 (expr -> NUMBER .)
    EQEQ            reduce using rule 23 (expr -> NUMBER .)
    NEQ             reduce using rule 23 (expr -> NUMBER .)
    GT              reduce using rule 23 (expr -> NUMBER .)
    LT              reduce using rule 23 (expr -> NUMBER .)
    GEQ             reduce using rule 23 (expr -> NUMBER .)
    LEQ             reduce using rule 23 (expr -> NUMBER .)
    AND             reduce using rule 23 (expr -> NUMBER .)
    OR              reduce using rule 23 (expr -> NUMBER .)
    PLUS            reduce using rule 23 (expr -> NUMBER .)
    MINUS           reduce using rule 23 (expr -> NUMBER .)
    TIMES           reduce using rule 23 (expr -> NUMBER .)
    DIVIDE          reduce using rule 23 (expr -> NUMBER .)
    COMMA           reduce using rule 23 (expr -> NUMBER .)
    ID              reduce using rule 23 (expr -> NUMBER .)
    PRINT           reduce using rule 23 (expr -> NUMBER .)
    IF              reduce using rule 23 (expr -> NUMBER .)
    FOR             reduce using rule 23 (expr -> NUMBER .)
    $end            reduce using rule 23 (expr -> NUMBER .)
    RBRACE          reduce using rule 23 (expr -> NUMBER .)
    RPAREN          reduce using rule 23 (expr -> NUMBER .)


state 13

    (24) expr -> FLOAT .

    COLON           reduce using rule 24 (expr -> FLOAT .)
    EQEQ            reduce using rule 24 (expr -> FLOAT .)
    NEQ             reduce using rule 24 (expr -> FLOAT .)
    GT              reduce using rule 24 (expr -> FLOAT .)
    LT              reduce using rule 24 (expr -> FLOAT .)
    GEQ             reduce using rule 24 (expr -> FLOAT .)
    LEQ             reduce using rule 24 (expr -> FLOAT .)
    AND             reduce using rule 24 (expr -> FLOAT .)
    OR              reduce using rule 24 (expr -> FLOAT .)
    PLUS            reduce using rule 24 (expr -> FLOAT .)
    MINUS           reduce using rule 24 (expr -> FLOAT .)
    TIMES           reduce using rule 24 (expr -> FLOAT .)
    DIVIDE          reduce using rule 24 (expr -> FLOAT .)
    COMMA           reduce using rule 24 (expr -> FLOAT .)
    ID              reduce using rule 24 (expr -> FLOAT .)
    PRINT           reduce using rule 24 (expr -> FLOAT .)
    IF              reduce using rule 24 (expr -> FLOAT .)
    FOR             reduce using rule 24 (expr -> FLOAT .)
    $end            reduce using rule 24 (expr -> FLOAT .)
    RBRACE          reduce using rule 24 (expr -> FLOAT .)
    RPAREN          reduce using rule 24 (expr -> FLOAT .)


state 14

    (25) expr -> ID .

    COLON           reduce using rule 25 (expr -> ID .)
    EQEQ            reduce using rule 25 (expr -> ID .)
    NEQ             reduce using rule 25 (expr -> ID .)
    GT              reduce using rule 25 (expr -> ID .)
    LT              reduce using rule 25 (expr -> ID .)
    GEQ             reduce using rule 25 (expr -> ID .)
    LEQ             reduce using rule 25 (expr -> ID .)
    AND             reduce using rule 25 (expr -> ID .)
    OR              reduce using rule 25 (expr -> ID .)
    PLUS            reduce using rule 25 (expr -> ID .)
    MINUS           reduce using rule 25 (expr -> ID .)
    TIMES           reduce using rule 25 (expr -> ID .)
    DIVIDE          reduce using rule 25 (expr -> ID .)
    COMMA           reduce using rule 25 (expr -> ID .)
    ID              reduce using rule 25 (expr -> ID .)
    PRINT           reduce using rule 25 (expr -> ID .)
    IF              reduce using rule 25 (expr -> ID .)
    FOR             reduce using rule 25 (expr -> ID .)
    $end            reduce using rule 25 (expr -> ID .)
    RBRACE          reduce using rule 25 (expr -> ID .)
    RPAREN          reduce using rule 25 (expr -> ID .)


state 15

    (26) expr -> STRING .

    COLON           reduce using rule 26 (expr -> STRING .)
    EQEQ            reduce using rule 26 (expr -> STRING .)
    NEQ             reduce using rule 26 (expr -> STRING .)
    GT              reduce using rule 26 (expr -> STRING .)
    LT              reduce using rule 26 (expr -> STRING .)
    GEQ             reduce using rule 26 (expr -> STRING .)
    LEQ             reduce using rule 26 (expr -> STRING .)
    AND             reduce using rule 26 (expr -> STRING .)
    OR              reduce using rule 26 (expr -> STRING .)
    PLUS            reduce using rule 26 (expr -> STRING .)
    MINUS           reduce using rule 26 (expr -> STRING .)
    TIMES           reduce using rule 26 (expr -> STRING .)
    DIVIDE          reduce using rule 26 (expr -> STRING .)
    COMMA           reduce using rule 26 (expr -> STRING .)
    ID              reduce using rule 26 (expr -> STRING .)
    PRINT           reduce using rule 26 (expr -> STRING .)
    IF              reduce using rule 26 (expr -> STRING .)
    FOR             reduce using rule 26 (expr -> STRING .)
    $end            reduce using rule 26 (expr -> STRING .)
    RBRACE          reduce using rule 26 (expr -> STRING .)
    RPAREN          reduce using rule 26 (expr -> STRING .)


state 16

    (27) expr -> TRUE .

    COLON           reduce using rule 27 (expr -> TRUE .)
    EQEQ            reduce using rule 27 (expr -> TRUE .)
    NEQ             reduce using rule 27 (expr -> TRUE .)
    GT              reduce using rule 27 (expr -> TRUE .)
    LT              reduce using rule 27 (expr -> TRUE .)
    GEQ             reduce using rule 27 (expr -> TRUE .)
    LEQ             reduce using rule 27 (expr -> TRUE .)
    AND             reduce using rule 27 (expr -> TRUE .)
    OR              reduce using rule 27 (expr -> TRUE .)
    PLUS            reduce using rule 27 (expr -> TRUE .)
    MINUS           reduce using rule 27 (expr -> TRUE .)
    TIMES           reduce using rule 27 (expr -> TRUE .)
    DIVIDE          reduce using rule 27 (expr -> TRUE .)
    COMMA           reduce using rule 27 (expr -> TRUE .)
    ID              reduce using rule 27 (expr -> TRUE .)
    PRINT           reduce using rule 27 (expr -> TRUE .)
    IF              reduce using rule 27 (expr -> TRUE .)
    FOR             reduce using rule 27 (expr -> TRUE .)
    $end            reduce using rule 27 (expr -> TRUE .)
    RBRACE          reduce using rule 27 (expr -> TRUE .)
    RPAREN          reduce using rule 27 (expr -> TRUE .)


state 17

    (28) expr -> FALSE .

    COLON           reduce using rule 28 (expr -> FALSE .)
    EQEQ            reduce using rule 28 (expr -> FALSE .)
    NEQ             reduce using rule 28 (expr -> FALSE .)
    GT              reduce using rule 28 (expr -> FALSE .)
    LT              reduce using rule 28 (expr -> FALSE .)
    GEQ             reduce using rule 28 (expr -> FALSE .)
    LEQ             reduce using rule 28 (expr -> FALSE .)
    AND             reduce using rule 28 (expr -> FALSE .)
    OR              reduce using rule 28 (expr -> FALSE .)
    PLUS            reduce using rule 28 (expr -> FALSE .)
    MINUS           reduce using rule 28 (expr -> FALSE .)
    TIMES           reduce using rule 28 (expr -> FALSE .)
    DIVIDE          reduce using rule 28 (expr -> FALSE .)
    COMMA           reduce using rule 28 (expr -> FALSE .)
    ID              reduce using rule 28 (expr -> FALSE .)
    PRINT           reduce using rule 28 (expr -> FALSE .)
    IF              reduce using rule 28 (expr -> FALSE .)
    FOR             reduce using rule 28 (expr -> FALSE .)
    $end            reduce using rule 28 (expr -> FALSE .)
    RBRACE          reduce using rule 28 (expr -> FALSE .)
    RPAREN          reduce using rule 28 (expr -> FALSE .)


state 18

    (29) expr -> LPAREN . expr RPAREN
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 36

state 19

    (10) statement -> FOR ID . IN RANGE LPAREN expr RPAREN COLON block

    IN              shift and go to state 37


state 20

    (6) statement -> ID EQUALS expr .
    (11) expr -> expr . EQEQ expr
    (12) expr -> expr . NEQ expr
    (13) expr -> expr . GT expr
    (14) expr -> expr . LT expr
    (15) expr -> expr . GEQ expr
    (16) expr -> expr . LEQ expr
    (17) expr -> expr . AND expr
    (18) expr -> expr . OR expr
    (19) expr -> expr . PLUS expr
    (20) expr -> expr . MINUS expr
    (21) expr -> expr . TIMES expr
    (22) expr -> expr . DIVIDE expr
    (30) expr -> expr . COMMA expr

    ID              reduce using rule 6 (statement -> ID EQUALS expr .)
    PRINT           reduce using rule 6 (statement -> ID EQUALS expr .)
    IF              reduce using rule 6 (statement -> ID EQUALS expr .)
    FOR             reduce using rule 6 (statement -> ID EQUALS expr .)
    $end            reduce using rule 6 (statement -> ID EQUALS expr .)
    RBRACE          reduce using rule 6 (statement -> ID EQUALS expr .)
    EQEQ            shift and go to state 23
    NEQ             shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GEQ             shift and go to state 27
    LEQ             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    COMMA           shift and go to state 35


state 21

    (7) statement -> PRINT LPAREN expr . RPAREN
    (11) expr -> expr . EQEQ expr
    (12) expr -> expr . NEQ expr
    (13) expr -> expr . GT expr
    (14) expr -> expr . LT expr
    (15) expr -> expr . GEQ expr
    (16) expr -> expr . LEQ expr
    (17) expr -> expr . AND expr
    (18) expr -> expr . OR expr
    (19) expr -> expr . PLUS expr
    (20) expr -> expr . MINUS expr
    (21) expr -> expr . TIMES expr
    (22) expr -> expr . DIVIDE expr
    (30) expr -> expr . COMMA expr

    RPAREN          shift and go to state 38
    EQEQ            shift and go to state 23
    NEQ             shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GEQ             shift and go to state 27
    LEQ             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    COMMA           shift and go to state 35


state 22

    (8) statement -> IF expr COLON . block
    (9) statement -> IF expr COLON . block ELSE COLON block
    (4) block -> . LBRACE statement_list RBRACE
    (5) block -> . LBRACE RBRACE

    LBRACE          shift and go to state 40

    block                          shift and go to state 39

state 23

    (11) expr -> expr EQEQ . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 41

state 24

    (12) expr -> expr NEQ . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 42

state 25

    (13) expr -> expr GT . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 43

state 26

    (14) expr -> expr LT . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 44

state 27

    (15) expr -> expr GEQ . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 45

state 28

    (16) expr -> expr LEQ . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 46

state 29

    (17) expr -> expr AND . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 47

state 30

    (18) expr -> expr OR . expr
    (11) expr -> . expr EQEQ expr
    (12) expr -> . expr NEQ expr
    (13) expr -> . expr GT expr
    (14) expr -> . expr LT expr
    (15) expr -> . expr GEQ expr
    (16) expr -> . expr LEQ expr
    (17) expr -> . expr AND expr
    (18) expr -> . expr OR expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . NUMBER
    (24) expr -> . FLOAT
    (25) expr -> . ID
    (26) expr -> . STRING
    (27) expr -> . TRUE
    (28) expr -> . FALSE
    (29) expr -> . LPAREN expr RPAREN
    (30) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 48

state 31
